--- a/src/components/common/style.css
+++ b/src/components/common/style.css
@@ -24,6 +24,35 @@
   font-size: 20px;
 }
 
+.app-title {
+  display: block;
+  border: 0;
+  cursor: pointer;
+  padding: 0;
+  margin: 0;
+  font-size: 36px;
+  font-weight: 700;
+  color: #000;
+  background-color: transparent;
+  border-radius: 4px;
+  float:  right;
+}
+
+.log-btn {
+  display: block;
+  border: 0;
+  cursor: pointer;
+  padding: 12px 18px;
+  width: 100px;
+  margin: 12px 18px auto 0;
+  font-size: 16px;
+  font-weight: 700;
+  color: #fff;
+  background-color: #3498db;
+  border-radius: 4px;
+  float:  right;
+}
+
 .error {
   background-color: orangered;
 }
