--- a/src/components/bookDetail/style.css
+++ b/src/components/bookDetail/style.css
@@ -37,3 +37,26 @@
   border-radius: 4px;
   float:  right;
 }
+
+.form-field {
+  position: block;
+  clear: both;
+}
+
+.form-label {
+  float: left;
+  display: block;
+  margin-bottom: 6px;
+  font-size: 12px;
+  color: #2c3e50;
+}
+
+.form-detail {
+  float: left;
+  padding: 8px;
+  width: 100%;
+  font-size: 14px;
+  border: 1px solid #dedede;
+  border-radius: 4px;
+  transition: border-color .25s ease-out;
+}
